<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        style="@style/padded_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/heading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_label_dreschen_lassen" />

        <TextView
            style="@style/generic_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="48dp"
            android:text="@string/txt_dreschen_lassen" />

        <TextView
            android:id="@+id/txt_text_teil1"
            style="@style/zentrierter_text"
            android:layout_width="match_parent"
            android:text="@string/txt_dreschen_lassen_text1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_text_teil2"
            style="@style/zentrierter_text"
            android:layout_width="match_parent"
            android:text="@string/txt_dreschen_lassen_text2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_text_teil3"
            style="@style/zentrierter_text"
            android:layout_width="match_parent"
            android:text="@string/txt_dreschen_lassen_text3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_Auslosung"
            style="@style/generic_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="onButtonClick"
            android:text="@string/btn_phrase_dreschen" />
    </LinearLayout>

</ScrollView>